# PB-DFS

./: .gitignore  CMakeLists.txt  README.md  calc_stats.sh  heur_eval.sh  model_predict.sh  model_test.sh  model_test_trig_gcn.sh  model_train.sh  model_train_trig_gcn.sh  requirements_1.txt  requirements_2.txt  stats.py
GG-GCN/: pred_baselines.py  pred_gcn.py  test_baselines.py  test_gcn.py  train_baselines.py  train_gcn.py  ttest.py  utils.py
GG-GCN/gcn/: layers.py  metrics.py  models.py
PySCIPOpt/: setup.py
PySCIPOpt/PySCIPOpt.egg-info/: PKG-INFO  SOURCES.txt
PySCIPOpt/src/pyscipopt/: __init__.py  nodesel.pxi  scip.pxd  scip.pyx
TRI-GCN/: config.py  models.py  pred_time.py  test.py  train.py
TRIG-GCN/: layers.py  test.py  train.py  utils.py
data_generator/: utils.py
data_generator/ca/: gen_inst_ca.py  make_sample_ca.py
data_generator/ds/: gen_inst_ds.py  make_sample_ds.py
data_generator/mis/: gen_inst_mis.py  make_sample_mis.py  redumis
data_generator/vc/: gen_inst_vc.py  make_sample_vc.py
ret_solver/ds/heur_all_diving/: solving_stats_0.csv
ret_solver/ds/heur_all_rounding/: solving_stats_0.csv
ret_solver/ds/heur_feaspump/: solving_stats_0.csv
src/: branching_ml_dfs.cpp  branching_ml_dfs.hpp  branching_policy.cpp  branching_policy.hpp  global_config.cpp  global_config.hpp  heur_ml_diving.cpp  heur_ml_diving.hpp  heur_ml_subscip.cpp  heur_ml_subscip.hpp  main.cpp  nodesel_ml_dfs.cpp  nodesel_ml_dfs.hpp  preprocessor.cpp  preprocessor.hpp  scip_solver.cpp  scip_solver.hpp  stats.cpp  utils.cpp  utils.hpp
trained_models copy/ca/lr/: model.pkl
(+222 files in other folders)
